--- a/index.html
+++ b/index.html
@@ -6,69 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
+    <link rel="stylesheet" href="style.css">
 
     <style>
-
-        body{
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: rgba(255, 144, 14, 0.1);
-        }
-
-        nav,
-        section {
-            margin: 50px, 5%;
-        }
-
-        nav {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .nav-brand {
-            font-size: 45px;
-            font-weight: 700;
-        }
-
-        .nav-links {
-            display: flex;
-            align-items: center;
-        }
-        .nav-links a{
-            text-decoration: none;
-        }
-        p{
-            color: #727272;
-        }
-        .btn-primary {
-            padding: 10px;
-            background-color: #FF900E;
-            border-radius: 8px;
-        }
-
-        .banner-text{
-            text-align: center;
-        }
-        .banner-img img{
-            width: 100%;
-        }
-
-        .quick-list{
-            display: flex;
-        }
-        .quick-list .images{
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-        }
-
-        .features-flex-items{
-            display: flex;
-            gap: 30px;
-        }
     </style>
 
 </head>
