--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav-barnd">G3 Architects</h3>
+            <h3 class="nav-brand">G3 Architects</h3>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="#">About</a>
@@ -42,16 +42,16 @@
         </div>
     </header>
 
-    <main>
+   <main>
         <section class="quick-list">
-            <div class="images">
+            <div class="images item">
                 <img src="./images/team1.png" alt="">
                 <img src="./images/team2.png" alt="">
                 <img src="./images/team3.png" alt="">
                 <img src="./images/team4.png" alt="">
             </div>
-            <div class="texts">
-                <h2 class="sect-title">Quick list of Our Features</h2>
+            <div class="texts item">
+                <h2 class="sect-title"><span class="text-gray">Quick list</span> of Our <span class="text-orange">Features</span></h2>
                 <p>
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
@@ -63,7 +63,7 @@
         <section class="features">
             <div class="features-flex-items">
                 <div class="item">
-                    <h2 class="features-title">Features you will love & enjoy</h2>
+                    <h2 class="sect-title">Features you will love & enjoy</h2>
                     <p>
                         Features that you'll love and enjoy, including intuitive design, easy editing, and a wide range of customization options.
                     </p>
@@ -100,8 +100,8 @@
                 </div>
             </div>
             <button class="btn-primary feature-btn">
-                <span>Ten + year</span>
-                Experience
+                <span class="fs-biger">10+Year</span>
+                <span class="fs-big">Experience</span>               
             </button>
         </section>
 
@@ -112,23 +112,23 @@
             <div class="fact-cards">
                 <div class="fact-card">
                     <img src="./images/icons/ribon.png" alt="">
-                    <h5 class="number">54</h5>
-                    <h6 class="name">Awards Winnings</h6>
+                    <span class="number">54</span>
+                    <span class="name">Awards Winnings</span>
                 </div>
                 <div class="fact-card">
                     <img src="./images/icons/projects.png" alt="">
-                    <h5 class="number">1458</h5>
-                    <h6 class="name">Project Finished</h6>
+                    <span class="number">1458</span>
+                    <span class="name">Project Finished</span>
                 </div>
                 <div class="fact-card">
                     <img src="./images/icons/customers.png" alt="">
-                    <h5 class="number">590</h5>
-                    <h6 class="name">Clients Worked</h6>
+                    <span class="number">590</span>
+                    <span class="name">Clients Worked</span>
                 </div>
                 <div class="fact-card">
                     <img src="./images/icons/email.png" alt="">
-                    <h5 class="number">22578</h5>
-                    <h6 class="name">Email Send</h6>
+                    <span class="number">22578</span>
+                    <span class="name">Email Send</span>
                 </div>
             </div>
         </section>
