add new section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,68 @@
             </div>
         </section>
 
+        <section class="client-review">
+            <h3 class="sect-title">Client Review</h3>
+            <p>Here are Some reviews from our most recent clients</p>
+
+            <div class="review-container">
+                <div class="review">
+                    <h4 class="client-name">Jhon Doe</h4>
+                    <p>I am very impressed with the work.
+                        Keep up the good work.
+                    </p>
+
+                    <div class="ratings">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+                
+                <div class="review">
+                    <h4 class="client-name">Robin Cooper</h4>
+                    <p>I am very impressed with the work.
+                        Keep up the good work.
+                    </p>
+                    <div class="ratings">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+                <div class="review">
+                    <h4 class="client-name">Malcom Hathway</h4>
+                    <p>I am very impressed with the work.
+                        Keep up the good work.
+                    </p>
+                    <div class="ratings">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+                <div class="review">
+                    <h4 class="client-name">Aroura Bekar</h4>
+                    <p>I am very impressed with the work.
+                        Keep up the good work.
+                    </p>
+                    <div class="ratings">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section  class="sponsor">
             <h3 class="sect-title">Our Sponspors</h3>
             <p>We are grateful for the support of our esteemed sponsors, who play a vital role in our organization's growth and success.</p>
